@@ -32,6 +32,8 @@ class Net::SSLeay::X509_VERIFY_PARAM : pointer {
   native method get_hostflags : int ();
   
   native method set1_email : int ($email : string, $emaillen : int = -1);
+  
+  native method set1_ip_asc : int ($ipasc : string);
                                  
   native method DESTROY : void ();
 }
